src/component/scrollable_text/snapshots/envision__component__scrollable_text__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/scrollable_text/tests.rs
expression: terminal.backend().to_string()
---
Line 1                                 ▲
Line 2                                 █
Line 3                                 █
Line 4                                 █
Line 5                                 █
Line 6                                 █
Line 7                                 ║
Line 8                                 ▼
