src/component/scrollable_text/snapshots/envision__component__scrollable_text__tests__view_empty.snap
---
source: src/component/scrollable_text/tests.rs
assertion_line: 369
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
