src/component/scrollable_text/snapshots/envision__component__scrollable_text__tests__view_scrolled.snap
---
source: src/component/scrollable_text/tests.rs
assertion_line: 396
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Line 4                                │
│Line 5                                │
│Line 6                                │
│Line 7                                │
└──────────────────────────────────────┘
