src/component/scrollable_text/snapshots/envision__component__scrollable_text__tests__view_with_content.snap
---
source: src/component/scrollable_text/tests.rs
assertion_line: 382
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Hello, world!                         │
│This is a test.                       │
│Line three.                           │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
